@@ -7,3 +7,6 @@ fi
 if test "$1" = "Unicode"; then
 echo @ZenLib_Unicode@
 fi
+if test "$1" = "Exists"; then
+echo yes
+fi
