@@ -1,0 +1,11 @@
+prefix=@prefix@
+exec_prefix=@exec_prefix@
+libdir=@libdir@
+includedir=@includedir@
+Unicode=@ZenLib_Unicode@
+
+Name: libzen
+Version: @PACKAGE_VERSION@
+Description: ZenLib
+Libs: -L${libdir} -lzen -lpthread
+Cflags: -I${includedir}
