@@ -1,5 +1,7 @@
 Version 0.3.4.1 2008-
 ---------------
++ Better Linux integration
++ rpm stuff (thanks to oc2pus http://packman.links2linux.org)
 x Code cleanup
 
 Version 0.3.4.0 2008-10-17
